create archive and clean up worker, implement logs/cleanup API
